--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 10 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -60,8 +60,8 @@ plugins:
 
 author:
   name   : "Dr Steve Jasper"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  avatar : "/assets/images/drsteve.jpg"
+  bio    : "Dr Steve is an expert in jet lag and how it affects business performance."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
