Update email, description

--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Dr Steve Jasper
-email:
+email: drsteve@jetlagguy.com.au
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Dr Steve Jasper is a global expert in jet lag and how it affects business performance.
 twitter_username: username
 github_username: jetlagguy
 minimal_mistakes_skin: default
@@ -32,7 +30,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 10 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Australia/Melbourne # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -61,7 +59,7 @@ plugins:
 author:
   name   : "Dr Steve Jasper"
   avatar : "/assets/images/drsteve.jpg"
-  bio    : "Dr Steve is an expert in jet lag and how it affects business performance."
+  bio    : "Dr Steve is a global expert in jet lag and how it affects business performance."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
