--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Dr Steve Jasper is a global expert in jet lag and how it affects business performance.
 twitter_username: username
 github_username: jetlagguy
-minimal_mistakes_skin: default
+minimal_mistakes_skin: contrast
 search: true
 github: [metadata]
 
